Hero section overflow fix

--- a/src/app/(site)/globals.css
+++ b/src/app/(site)/globals.css
@@ -60,7 +60,6 @@
     height: 48px;
     width: 100%;
     background: white;
-    transform: translateY(0%);
     clip-path: polygon(0% 100%, 100% 0%, 100% 100%, 0% 100%);
   }
 
@@ -97,7 +96,6 @@
     .overlay {
       will-change: transform, opacity;
       transform: translateZ(0);
-      /* Promote layer to GPU */
   }
 }
 
